neue Grafik für bib, erweiterungsmodul und kompaktdiagramm in ordner und in dokument.

--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -116,7 +116,7 @@ Die Services sind dabei jeweils unabhängig vom restlichen Model funktionsfähig
 \clearpage
   \subsection{Klassendiagramm}
   \begin{center}
-	\includegraphics[width=\textwidth]{Diagramme/Klassendiagram_KOMPAKT.png}
+	\includegraphics[width=\textwidth]{Diagramme/uebersicht/Klassendiagram_KOMPAKT.png}
 \end{center}
 \paragraph{Anmerkungen}
 eine hochauflösendere Darstellung des Klassendiagramms findet sich im Anhang.
@@ -124,8 +124,10 @@ eine hochauflösendere Darstellung des Klassendiagramms findet sich im Anhang.
 %%\section{Klassenübersicht} brauchen wir nicht, da das bei uns schon alles im Inhaltsverzeichnis aufgelistet wird.
 \section{Klassenbeschreibung Model}
 \subsection{Bibliothek}
-
-	\subsubsection{Interface IEarablesConnection}
+\begin{center}
+	\includegraphics[width=\textwidth]{Diagramme/uebersicht/Bibliothek.png}
+\end{center}	
+\subsubsection{Interface IEarablesConnection}
 	
 	\includegraphics[width=\textwidth]{bilder/BibPackageKlassen/IEarablesConnection.png}
 
@@ -407,7 +409,7 @@ Enthält alle relevanten Informationen, die als Parameter mit dem Event IMUDataR
 \subsection{Erweiterungsmodul}
 \begin{center}
 	\centering
-	\includegraphics[width=15cm]{bilder/ErweiterungsmodulTest.png}
+	\includegraphics[width=15cm]{Diagramme/uebersicht/Erweiterungsmodul.png}
 \end{center}
 
 \begin{minipage}[b]{0.5\textwidth}
