--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -373,7 +373,7 @@ Enthält alle relevanten Informationen, die als Parameter mit dem Event DeviceCo
 	\includegraphics[width=\textwidth]{bilder/BibPackageKlassen/ButtonEventArgs.png}
 \end{minipage}
 \paragraph{Klassenbeschreibung:}
-Enthält alle relevanten Informationen, die als Parameter mit dem Event ButtonPressed gefeuert werden. Momentan ist diese Klasse leer, aber sie existiert bereits, falls bei der Weiterentwicklung des Moduls doch Argumente übergeben werden müssen.
+Enthält alle relevanten Informationen, die als Parameter mit dem Event ButtonPressed gefeuert werden. Momentan ist diese Klasse leer, aber sie existiert bereits, falls bei der Weiterentwicklung des Moduls doch Argumente übergeben werden müssen.\\
 
 \begin{minipage}[b]{0.5\textwidth}
 	\subsubsection{Class DataEventArgs}
