Klassenindextabelle mit longtable realisiert

--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -8,6 +8,7 @@
 \usepackage{booktabs}
 \usepackage{lmodern}
 \usepackage{titlesec}
+\usepackage{longtable}
 % Notwendig für Links im Text
 \usepackage{hyperref}
 %%\usepackage{svg}
@@ -1321,78 +1322,155 @@ Es werden folgende Erweiterungen benötigt:\\
 
 \section{Klassenindex}
 
-
-\begin{tabular}[h]{p{15cm}c}
-Klassenname & Seite \\
+\begin{center}
+\begin{longtable}{|p{14cm}|c|}
+\hline
+\textbf{Klassenname} & \textbf{Seite}\\
+\hline
+\endfirsthead
+\multicolumn{2}{c}%
+{\ \ \textit{}} \\
+\hline
+\textbf{Klassenname} & \textbf{Seite} \\
+\hline
+\endhead
+\hline \multicolumn{2}{r}{\textit{}} \\
+\endfoot
 \hline
 Abstract Class AbstractPushUpActivity & 1\\
+\hline
 Abstract Class AbstractRunningActivity & 1\\
+\hline
 Abstract Class AbstractSitUpActivity & 1\\
+\hline
 Abstract Class AbstractStepActivity & 1\\
+\hline
 Abstract Class BaseModeViewModel & 1\\
+\hline
 Class Accelerometere & 1\\
+\hline
 Class Activity & 1\\
+\hline
 Class ActivityManager & 1\\
+\hline
 Class App & 1\\
+\hline
 Class ButtonEventArgs & 1\\
+\hline
 Class Characteristics & 1\\
+\hline
 Class ConfigContainer & 1\\
+\hline
 Class CountModeActivePage & 1\\
+\hline
 Class CountModePage & 1\\
+\hline
 Class CountModeViewModel & 1\\
+\hline
 Class DBEntry & 1\\
+\hline
 Class DataBaseConnection & 1\\
+\hline
 Class DataEventArgs & 1\\
+\hline
 Class DataOverviewPage & 1\\
+\hline
 Class DataOverviewViewModel & 1\\
+\hline
 Class DeviceEventArgs & 1\\
+\hline
 Class EarablesConnection & 1\\
+\hline
 Class ExceptionHandlingViewModel & 1\\
+\hline
 Class Gyroscope & 1\\
+\hline
 Class HomeMenuItem & 1\\
+\hline
 Class IMUDataEntry & 1\\
+\hline
 Class ImportExportPage & 1\\
+\hline
 Class ImportExportViewModel & 1\\
+\hline
 Class ListenAndPerformActivePage & 1\\
+\hline
 Class ListenAndPerformPage & 1\\
+\hline
 Class ListenAndPerformViewModel & 1\\
+\hline
 Class MainPage & 1\\
+\hline
 Class MenuPage & 1\\
+\hline
 Class MusicModeAllPage & 1\\
+\hline
 Class MusicModeViewModel & 1\\
+\hline
 Class PopUpScanningPage & 1\\
+\hline
 Class PushUpActivityThreshold & 1\\
+\hline
 Class PushUpEventArgs & 1\\
+\hline
 Class RunningActivityThreshold & 1\\
+\hline
 Class RunningEventArgs & 1\\
+\hline
 Class ScanningPopUpViewModel & 1\\
+\hline
 Class ServiceManager & 1\\
+\hline
 Class SettingsPage & 1\\
+\hline
 Class SettingsService & 1\\
+\hline
 Class SettingsViewModel & 1\\
+\hline
 Class SitUpActivity & 1\\
+\hline
 Class SitUpActivityThreshold & 1\\
+\hline
 Class StepActivityActivityThreshold & 1\\
+\hline
 Class StepEventActivity & 1\\
+\hline
 Class StepModeActivePage & 1\\
+\hline
 Class StepModePage & 1\\
+\hline
 Class StepModeViewModel & 1\\
+\hline
 Class User & 1\\
+\hline
 Enumeration LPF\_Accelerometer & 1\\
+\hline
 Enumeration LPF\_Gyroscope & 1\\
+\hline
 Enumeration MenuItemType & 1\\
+\hline
 Enumeration SamplingRate & 1\\
+\hline
 Interface ActivityArgs & 1\\
+\hline
 Interface CountableActivityArgs & 1\\
+\hline
 Interface IActivityManager & 1\\
+\hline
 Interface IDataBaseConnection & 1\\
+\hline
 Interface IEarablesConnection & 1\\
+\hline
 Interface IManager & 1\\
+\hline
 Interface ISettingsService & 1\\
+\hline
 Static Class Constants & 1\\
+\hline
 Static Class IMUDataExtractor & 1\\
-\end{tabular}
-
+\hline
+\end{longtable}
+\end{center}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% END CONTENT %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \clearpage
