--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -999,8 +999,12 @@ Die Klasse SettingsViewModel enthält die Logik der SettingsPage. Sie erbt von I
 	\end{itemize}
 \section{Klassenbeschreibung View}
 
-
-\subsection{Class StepModePage}
+\begin{minipage}[b]{0.7\textwidth}
+	\subsection{Class StepModePage}
+\end{minipage}
+\begin{minipage}[c]{0.3\textwidth}
+	\includegraphics[width=\textwidth]{bilder/ViewKlassen/StepModePage.png}
+\end{minipage}
 \paragraph{Klassenbeschreibung:}
 Diese Klasse stellt die Ansicht des StepModes dar, solange kein Laufvorgang gestartet ist.
 \paragraph{Attribute:}
@@ -1012,7 +1016,12 @@ Diese Klasse stellt die Ansicht des StepModes dar, solange kein Laufvorgang gest
 	\item[+] \textbf{Start: Button} \\ Button um den Laufvorgang zu starten. Feuert den StartActivityCommand aus dem ViewModel.
 	\end{itemize}
 
-\subsection{Class StepModeActivePage}
+\begin{minipage}[b]{0.7\textwidth}
+	\subsection{Class StepActiveModePage}
+\end{minipage}
+\begin{minipage}[c]{0.3\textwidth}
+	\includegraphics[width=\textwidth]{bilder/ViewKlassen/StepModeActivePage.png}
+\end{minipage}
 \paragraph{Klassenbeschreibung:}
 Diese Klasse stellt die Ansicht des Stepmodes während eines laufenden Laufvorgangs an.
 \paragraph{Attribute:}
@@ -1025,7 +1034,12 @@ Diese Klasse stellt die Ansicht des Stepmodes während eines laufenden Laufvorga
 	\item[+] \textbf{Stop: Button} \\ Button um den Laufvorgang zu stoppen. Feuert den StopActivityCommand aus dem ViewModel.
 	\end{itemize}
 	
-\subsection{Class CountModePage}
+\begin{minipage}[b]{0.7\textwidth}
+	\subsection{Class CountModePage}
+\end{minipage}
+\begin{minipage}[c]{0.3\textwidth}
+	\includegraphics[width=\textwidth]{bilder/ViewKlassen/CountModePage.png}
+\end{minipage}
 \paragraph{Klassenbeschreibung:}
 Diese Klasse stellt die Ansicht des Countmodes dar, solange kein Zählvorgang gestartet ist.
 \paragraph{Attribute:}
@@ -1035,7 +1049,12 @@ Diese Klasse stellt die Ansicht des Countmodes dar, solange kein Zählvorgang ge
 	\item[+] \textbf{Start: Button} \\ Button um den Zählvorgang zu starten. Feuert den StartActivityCommand aus dem ViewModel.
 	\end{itemize}
 
-\subsection{Class CountModeActivePage}
+\begin{minipage}[b]{0.7\textwidth}
+	\subsection{Class CountModeActivePage}
+\end{minipage}
+\begin{minipage}[c]{0.3\textwidth}
+	\includegraphics[width=\textwidth]{bilder/ViewKlassen/CountModeActivePage.png}
+\end{minipage}
 \paragraph{Klassenbeschreibung:}
 Diese Klasse stellt die Ansicht des Countmodes während eines laufenden Zählvorgangs an.
 \paragraph{Attribute:}
@@ -1047,9 +1066,14 @@ Diese Klasse stellt die Ansicht des Countmodes während eines laufenden Zählvor
 	\item[+] \textbf{Stop: Button} \\ Button um den Zählvorgang zu stoppen. Feuert den StopActivityCommand aus dem ViewModel.
 	\end{itemize}
 
-\subsection{Class ListenAndPerformPage}
+\begin{minipage}[b]{0.7\textwidth}
+	\subsection{Class ListenAndPerformPage}
+\end{minipage}
+\begin{minipage}[c]{0.3\textwidth}
+	\includegraphics[width=\textwidth]{bilder/ViewKlassen/ListenAndPerformPage.png}
+\end{minipage}
 \paragraph{Klassenbeschreibung:}
-Diese Klasse stellt die Ansicht von ListAndPerform dar, solange kein Trainingsvorgang gestartet ist.
+Diese Klasse stellt die Ansicht von ListenAndPerform dar, solange kein Trainingsvorgang gestartet ist.
 \paragraph{Attribute:}
 	\begin{itemize}
 	\item[+] \textbf{ListenAndPerform: Label} \\ Anzeige des Modusnamen ListenAndPerform.
@@ -1061,7 +1085,12 @@ Diese Klasse stellt die Ansicht von ListAndPerform dar, solange kein Trainingsvo
 	\item[+] \textbf{Start: Button} \\ Button um den Trainingsvorgang zu starten. Feuert den StartActivityCommand aus dem ViewModel.
 	\end{itemize}
 
-\subsection{Class ListenAndPerformActivePage}
+\begin{minipage}[b]{0.7\textwidth}
+	\subsection{Class ListenAndPerformActivePage}
+\end{minipage}
+\begin{minipage}[c]{0.3\textwidth}
+	\includegraphics[width=\textwidth]{bilder/ViewKlassen/ListenAndPerformActivePage.png}
+\end{minipage}
 \paragraph{Klassenbeschreibung:}
 Die Klasse stellt die Ansicht von ListenAndPerform während eines laufenden Trainingsvorgangs an.
 \paragraph{Attribute:}
@@ -1074,7 +1103,12 @@ Die Klasse stellt die Ansicht von ListenAndPerform während eines laufenden Trai
 	\item[+] \textbf{Stop: Button} \\ Button um den Trainingsvorgang zu stoppen. Feuert den StopActivityCommand aus dem ViewModel.
 	\end{itemize}
 	
-\subsection{Class MusicModeAllPage}
+\begin{minipage}[b]{0.7\textwidth}
+	\subsection{Class MusicModeAllPage}
+\end{minipage}
+\begin{minipage}[c]{0.3\textwidth}
+	\includegraphics[width=\textwidth]{bilder/ViewKlassen/MusicModeAllPage.png}
+\end{minipage}
 \paragraph{Klassenbeschreibung:}
 Die Klasse stellt die komplette Ansicht des Musicmodes dar. Beim Starten des Musikvorgang wird zu keiner Page gewechselt.
 \paragraph{Attribute:}
@@ -1201,10 +1235,10 @@ Die Klasse stellt die komplette Ansicht des Musicmodes dar. Beim Starten des Mus
 	\paragraph{Methoden:}
 	\begin{itemize}
 		\item[+] \textbf{<<create>> App()}\\Die Methode ist der Konstruktor von der Klasse App. In diesem werden die xaml-Seiten gelesen und erstellt. Zudem wird die gespeicherte Sprache gesetzt. Zum Schluss erstellt der Konstruktor die MainPage; die App startet. (Siehe 7.2.1, Sequenzdiagramm 'Start der App')
-		\item[#] \textbf{OnStart(): void}\\Die Methode OnStart regelt das Verhalten der App, wenn diese gestartet wird. In dieser App wird diese Methode leer sein, da das Startverhalten im Konstruktor definiert ist.
-		\item[#] \textbf{OnSleep(): void}\\Die Methode OnSleep regelt das Verhalten der App, wenn diese in den Hintergrund gerät. Zunächst werden aktive Vorgänge beendet und gespeichert. Dies gelingt über die Klassen MainPage und NavigationMenu, welche den aktiven Vorgang zurückgeben können. Dieser Vorgang muss gestoppt werden und die Trainingsdaten müssen gespeichert werden. Dazu wird das passende ViewModel angeschaut und der Service IDataBaseConnection wird angesprochen.
+		\item[\#] \textbf{OnStart(): void}\\Die Methode OnStart regelt das Verhalten der App, wenn diese gestartet wird. In dieser App wird diese Methode leer sein, da das Startverhalten im Konstruktor definiert ist.
+		\item[\#] \textbf{OnSleep(): void}\\Die Methode OnSleep regelt das Verhalten der App, wenn diese in den Hintergrund gerät. Zunächst werden aktive Vorgänge beendet und gespeichert. Dies gelingt über die Klassen MainPage und NavigationMenu, welche den aktiven Vorgang zurückgeben können. Dieser Vorgang muss gestoppt werden und die Trainingsdaten müssen gespeichert werden. Dazu wird das passende ViewModel angeschaut und der Service IDataBaseConnection wird angesprochen.
 		Daraufhin kann die App in den Hintergrund geraten.
-		\item[#] \textbf{OnResume(): void}\\Die Methode OnResume regelt das Verhalten der App, wenn diese aus dem Hintergrund wieder in den Vordergrund gerät. Es wird die jeweilige Seite angezeigt, welche vor dem 'schlafen gehen' der App aktiv war. Falls diese Seite eine aktive Vorgangsseite war, wird die passive Aktivitätsseite angezeigt.
+		\item[\#] \textbf{OnResume(): void}\\Die Methode OnResume regelt das Verhalten der App, wenn diese aus dem Hintergrund wieder in den Vordergrund gerät. Es wird die jeweilige Seite angezeigt, welche vor dem 'schlafen gehen' der App aktiv war. Falls diese Seite eine aktive Vorgangsseite war, wird die passive Aktivitätsseite angezeigt.
 	\end{itemize}
 	
 \newpage
